# tack

./: .gitignore  .swiftlint.yml  Cargo.toml  Package.resolved  Package.swift  expr.tck  test.tck
.github/workflows/: rust.yml  swift.yml
Sources/: Diag.swift  Environment.swift  Expression.swift  File.swift  Function.swift  Item.swift  Lexer.swift  Parser.swift  Span.swift  Tokens.swift  Value.swift  main.swift
Sources/TackCLI/: main.swift
Sources/TackLib/: Diag.swift  Environment.swift  Expression.swift  File.swift  Function.swift  Item.swift  Lexer.swift  Parser.swift  Span.swift  Tokens.swift  Utils.swift  Value.swift  Vm.swift
Tests/TackTest/: main.swift
Tests/TackTests/: Tests.swift
Tests/TackTests/tests/: complexSanity.tck  sanity.tck
src/: db.rs  diag.rs  file.rs  lexer.rs  lib.rs  query.rs  span.rs  utils.rs
src/query/: dep_graph.rs  serde.rs
tack-tests/hello-world/: main.tck
