[package]
name = "tack"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
codespan-reporting = "0.12.0"
parking_lot = "0.12.4"
peek-again = { git = "https://github.com/DDAN-17/peek-again", branch = "main" }
unicode-segmentation = "1.12.0"
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
clang_log = "2.1.2"
postcard = { version = "1.1.3", features = ["use-std"] }
ordered-float = { version = "5.0.0", features = ["serde"] }
serde_json = "1.0.141"

[dev-dependencies]
itertools = "0.14.0"

[profile.bench]
debug = "full"
opt-level = 3
