[package]
name = "tack"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
codespan-reporting = "0.12.0"
ordered-float = "5.0.0"
parking_lot = "0.12.4"
peek-again = { git = "https://github.com/DDAN-17/peek-again", branch = "main" }
unicode-segmentation = "1.12.0"

[dev-dependencies]
itertools = "0.14.0"
